// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`API Rooms > GET /api/v1/rooms > should return a formatted rooms 1`] = `
[
  {
    "capacity": 5,
    "createdAt": "2025-04-07T12:39:29.812Z",
    "description": "Espace d'expérimentation de test et d'idées",
    "equipments": [
      {
        "id": "1",
        "name": "TV",
        "type": "TELEVISION",
      },
      {
        "id": "2",
        "name": "Retro Projecteur",
        "type": "PROJECTOR",
      },
    ],
    "id": "1",
    "image": "undefined/images/campaign.jpg",
    "isAvailable": true,
    "name": "Lab Alpha",
    "slug": "lab-alpha",
    "updatedAt": "2025-04-08T17:31:39.489Z",
  },
  {
    "capacity": 10,
    "createdAt": "2025-04-07T12:39:55.384Z",
    "description": "Pour des prise de décisions rapides et précises",
    "equipments": [
      {
        "id": "2",
        "name": "Retro Projecteur",
        "type": "PROJECTOR",
      },
    ],
    "id": "2",
    "image": "undefined/images/cooper.jpg",
    "isAvailable": true,
    "name": "Quantum",
    "slug": "quantum",
    "updatedAt": "2025-04-07T13:33:37.184Z",
  },
  {
    "capacity": 11,
    "createdAt": "2025-04-07T14:15:55.733Z",
    "description": "Brainstorming et créativité",
    "equipments": [],
    "id": "3",
    "image": "undefined/images/hemant.jpg",
    "isAvailable": true,
    "name": "Helix",
    "slug": "helix",
    "updatedAt": "2025-04-09T16:45:19.025Z",
  },
  {
    "capacity": 10,
    "createdAt": "2025-04-09T16:45:34.419Z",
    "description": "Point de convergence de toutes les idées",
    "equipments": [
      {
        "id": "1",
        "name": "TV",
        "type": "TELEVISION",
      },
      {
        "id": "2",
        "name": "Retro Projecteur",
        "type": "PROJECTOR",
      },
    ],
    "id": "4",
    "image": "undefined/images/walls.jpg",
    "isAvailable": true,
    "name": "Nexus",
    "slug": "nexus",
    "updatedAt": "2025-04-09T16:45:34.419Z",
  },
  {
    "capacity": 26,
    "createdAt": "2025-04-09T16:45:49.096Z",
    "description": "Pour de la hauteur et de la perspective",
    "equipments": [
      {
        "id": "1",
        "name": "TV",
      },
      {
        "id": "2",
        "name": "Retro Projecteur",
        "type": "PROJECTOR",
      },
    ],
    "id": "5",
    "image": "undefined/images/wells.jpg",
    "isAvailable": true,
    "name": "Observatory",
    "slug": "observatory",
    "updatedAt": "2025-04-09T16:45:49.096Z",
  },
]
`;

exports[`API Rooms > GET /api/v1/rooms/:slug > should return a formatted room 1`] = `
{
  "capacity": 5,
  "createdAt": "2025-04-07T12:39:29.812Z",
  "description": "Espace d'expérimentation de test et d'idées",
  "equipments": [
    {
      "id": "1",
      "name": "TV",
      "type": "TELEVISION",
    },
    {
      "id": "2",
      "name": "Retro Projecteur",
      "type": "PROJECTOR",
    },
  ],
  "id": "1",
  "image": "undefined/images/campaign.jpg",
  "isAvailable": true,
  "name": "Lab Alpha",
  "slug": "lab-alpha",
  "updatedAt": "2025-04-08T17:31:39.489Z",
}
`;
